fix(camera): meter before requesting a still